# crm-project

./: .env.production.example  .gitignore  DEPLOYMENT.md  LICENSE  MIGRATION_SUMMARY.md  QUICK_START.md  README.md  app.db  backup_schema_20251023_164054.sql  deploy.sh  dev.db  docker-compose.prod.yml  docker-compose.yml  run.py
backend/: .dockerignore  .env.example  .env.local.template  Dockerfile  README.md  WORK_LOGS_API_TEST_RESULTS.md  alembic.ini  app.db  assign_roles.py  dev.db  environment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  setup-local-db.sh  setup-local-env.sh  start-server.sh  test-local-env.sh  test.db  test_api.py  test_data_insertion.py
backend/alembic/: env.py
backend/app/: main.py
backend/cli/: __init__.py  crud_generate.py  field_parser.py  file_generator.py  migration_generator.py  router_registration.py
backend/docs/: BASESERVICE_MIGRATION.md  LOGGING_MIDDLEWARE_COMPLETE_FIX.md  LOGGING_MIDDLEWARE_FIX.md  crud-template-system.md
backend/scripts/: seed_menus_and_permissions.py  seed_org_data.py  set_default_passwords.py  set_test_passwords.py  setup.sh
backend/tests/: __init__.py  conftest.py  test_auth_api.py  test_auth_middleware.py  test_auth_utils.py  test_base_model.py  test_base_router.py  test_base_schemas.py  test_base_service.py  test_cli_integration.py  test_crm_field_types.py  test_crm_mixins.py  test_crm_validators.py  test_department_service.py  test_departments_api.py  test_employee_department_validation.py  test_employee_position.py  test_employees_api.py  test_employees_service.py  test_error_handler.py  test_field_parser.py  test_file_generator.py  test_health.py  test_logging_middleware.py  test_menus_api.py  test_middleware_integration.py  test_security.py  (+10 more)
(+135 files in other folders)
